# AdventOfCode

./: .gitignore  README.md  adventofcode.sh
.github/workflows/: csharp-2024.yml  csharp.yml  elixir.yml  rust.yml  typescript.yml
2022/elisp/: #day01.el#  day01.el
bash/2022/day01/: solve_part1.sh  solve_part2.sh
bash/2023/day01/: .lineinput.txt.swp  solve_part1.sh
bash/day01/: day01.sh
csharp/: AdventOfCode2021.sln
csharp/2020/AdventOfCode/: AdventOfCode.sln
csharp/2023/: AdventOfCode2023.sln
csharp/2024/: AdventOfCode2024.sln
csharp/AdventOfCode.ConsoleApplication/: Program.cs
csharp/AdventOfCode.ConsoleApplication/Puzzles/: Day15.cs  (+3 more)
elixir/adventofcode/: .aoc.defaults  .gitignore  README.md  mix.exs
fsharp/: AdventOfCode2021.sln
fsharp/AdventOfCode/: AdventOfCode.fsproj  Program.fs
fsharp/AdventOfCode.UnitTests/: AdventOfCode.UnitTests.fsproj
polybar/: adventofcode.sh  adventofcode_polybar.sh
rust/: Cargo.toml
rust/.fleet/: run.json
rust/src/: lib.rs  main.rs
rust/src/common/: grid.rs  input.rs  mod.rs  output.rs  point.rs
rust/src/year2020/: day07.rs  mod.rs
rust/src/year2021/: day01.rs  day02.rs  mod.rs
rust/src/year2022/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day12.rs  day13.rs  day14.rs  day15.rs  day17.rs  day18.rs  day20.rs  mod.rs
rust/src/year2023/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day14.rs  day15.rs  day18.rs  day19.rs  day21.rs  mod.rs
typescript/util/: grid.ts
(+230 files in other folders)
