[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
regex = "1"
took = "0.1"
pathfinding = "4.0.0"
stopwatch = "0.0.7"
hashbrown = "0.14.3"
rayon = "1.8"
num = "0.4.1"
matches = "0.1.10"

[dev-dependencies]
rstest = "0.18.2"